Fix visibility warnings from the inspector.